--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 <div id="why-use-drake" class="section level1">
 <h1 class="hasAnchor">
 <a href="#why-use-drake" class="anchor"></a>Why use drake?</h1>
-<p>The <code>drake</code> R package is a workflow manager and computational engine for data science projects. Its primary objective is to keep results up to date with the code and data they come from. When it runs a project, <code>drake</code> detects any pre-existing output and refreshes the pieces that are outdated or missing. Not every runthrough starts from scratch, and the final answers are reproducible. With a user-friendly R-focused interface, <a href="https://wlandau-lilly.github.io/drake/">comprehensive documentation</a>, and <a href="https://github.com/wlandau-lilly/drake/blob/master/vignettes/parallelism.Rmd">extensive implicit parallel computing support</a>, <code>drake</code> surpasses the analogous functionality in similar tools such as <a href="www.gnu.org/software/make/">Make</a>, <a href="https://github.com/richfitz/remake">remake</a>, <a href="https://github.com/r-lib/memoise">memoise</a>, and <a href="https://github.com/yihui/knitr">knitr</a>.</p>
+<p>The <code>drake</code> R package is a workflow manager and computational engine for data science projects. Its primary objective is to keep results up to date with the underlying code and data. When it runs a project, <code>drake</code> detects any pre-existing output and refreshes the pieces that are outdated or missing. Not every runthrough starts from scratch, and the final answers are reproducible. With a user-friendly R-focused interface, <a href="https://wlandau-lilly.github.io/drake/">comprehensive documentation</a>, and <a href="https://github.com/wlandau-lilly/drake/blob/master/vignettes/parallelism.Rmd">extensive implicit parallel computing support</a>, <code>drake</code> surpasses the analogous functionality in similar tools such as <a href="www.gnu.org/software/make/">Make</a>, <a href="https://github.com/richfitz/remake">remake</a>, <a href="https://github.com/r-lib/memoise">memoise</a>, and <a href="https://github.com/yihui/knitr">knitr</a>.</p>
 </div>
 <div id="what-gets-done-stays-done-" class="section level1">
 <h1 class="hasAnchor">
@@ -211,7 +211,7 @@ reg2 &lt;-<span class="st"> </span>function(d){
 <div id="reproducibility-with-confidence" class="section level1">
 <h1 class="hasAnchor">
 <a href="#reproducibility-with-confidence" class="anchor"></a>Reproducibility with confidence</h1>
-<p>The R community emphasizes reproducibility. Traditional themes include <a href="https://en.wikipedia.org/wiki/Replication_crisis">scientific replicability</a>, literate programming with <a href="https://yihui.name/knitr/">knitr</a>, and version control with <a href="https://git-scm.com/book/en/v2/Getting-Started-About-Version-Control">git</a>. But internal consistency is important too. Reproducibility carries the promise that your output matches the code and data it came from.</p>
+<p>The R community emphasizes reproducibility. Traditional themes include <a href="https://en.wikipedia.org/wiki/Replication_crisis">scientific replicability</a>, literate programming with <a href="https://yihui.name/knitr/">knitr</a>, and version control with <a href="https://git-scm.com/book/en/v2/Getting-Started-About-Version-Control">git</a>. But internal consistency is important too. Reproducibility carries the promise that your output matches the code and data you say you used.</p>
 <div id="evidence" class="section level2">
 <h2 class="hasAnchor">
 <a href="#evidence" class="anchor"></a>Evidence</h2>
