Add DOI badge and reviewer

--- a/authors.html
+++ b/authors.html
@@ -142,6 +142,10 @@
         </p>
       </li>
       <li>
+        <p><strong>Ben Marwick</strong>. Reviewer.
+        </p>
+      </li>
+      <li>
         <p><strong>Peter Slaughter</strong>. Reviewer.
         </p>
       </li>
