Adjust hex height

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
     
 <div id="the-drake-r-package" class="section level1">
 <div class="page-header"><h1 class="hasAnchor">
-<a href="#the-drake-r-package" class="anchor"></a>The drake R package <img src="https://cdn.rawgit.com/ropensci/drake/3b8e6ac4/images/logo.svg" align="right" alt="logo" width="125" style="border: none;">
+<a href="#the-drake-r-package" class="anchor"></a>The drake R package <img src="https://cdn.rawgit.com/ropensci/drake/3b8e6ac4/images/logo.svg" align="right" alt="logo" width="120" height="139" style="border: none; float: right;">
 </h1></div>
 <table class="table">
 <thead><tr class="header">
