Reposition visuals on the main page

--- a/index.html
+++ b/index.html
@@ -102,10 +102,7 @@
       </header><div class="row">
   <div class="contents col-md-9">
     
-<div id="the-drake-r-package" class="section level1">
-<div class="page-header"><h1 class="hasAnchor">
-<a href="#the-drake-r-package" class="anchor"></a>The drake R package <img src="https://cdn.rawgit.com/ropensci/drake/3b8e6ac4/images/logo.svg" align="right" alt="logo" width="120" height="139" style="border: none; float: right;">
-</h1></div>
+<p><img src="https://cdn.rawgit.com/ropensci/drake/d64a889c/images/infographic.svg" alt="infographic" align="center" style="border: none; float: center;"></p>
 <table class="table">
 <thead><tr class="header">
 <th align="left">Release</th>
@@ -134,11 +131,10 @@
 </tr>
 </tbody>
 </table>
-</div>
-<div id="why-use-drake" class="section level1">
-<h1 class="hasAnchor">
-<a href="#why-use-drake" class="anchor"></a>Why use drake?</h1>
-<p><img src="https://cdn.rawgit.com/ropensci/drake/d64a889c/images/infographic.svg" alt="infographic"></p>
+<div id="the-drake-r-package" class="section level1">
+<div class="page-header"><h1 class="hasAnchor">
+<a href="#the-drake-r-package" class="anchor"></a>The drake R package <img src="https://cdn.rawgit.com/ropensci/drake/3b8e6ac4/images/logo.svg" align="right" alt="logo" width="120" height="139" style="border: none; float: right;">
+</h1></div>
 <p>The <code>drake</code> R package is a workflow manager and computational engine for data science projects. Its primary objective is to keep results up to date with the underlying code and data. When it runs a project, <code>drake</code> detects any pre-existing output and refreshes the pieces that are outdated or missing. Not every runthrough starts from scratch, and the final answers are reproducible. With a user-friendly R-focused interface, <a href="https://ropensci.github.io/drake/">comprehensive documentation</a>, and <a href="https://github.com/ropensci/drake/blob/master/vignettes/parallelism.Rmd">extensive implicit parallel computing support</a>, <code>drake</code> surpasses the analogous functionality in similar tools such as <a href="www.gnu.org/software/make/">Make</a>, <a href="https://github.com/richfitz/remake">remake</a>, <a href="https://github.com/r-lib/memoise">memoise</a>, and <a href="https://github.com/yihui/knitr">knitr</a>.</p>
 </div>
 <div id="what-gets-done-stays-done-" class="section level1">
