Use master branch

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 <tr class="odd">
 <td align="left"><a href="https://doi.org/10.21105/joss.00550"><img src="http://joss.theoj.org/papers/10.21105/joss.00550/status.svg" alt="JOSS"></a></td>
 <td align="left"><a href="https://www.gnu.org/licenses/gpl-3.0.en.html"><img src="https://img.shields.io/badge/licence-GPL--3-blue.svg" alt="Licence"></a></td>
-<td align="left"><a href="https://ci.appveyor.com/project/ropensci/drake"><img src="https://ci.appveyor.com/api/projects/status/4ypc9xnmqt70j94e?svg=true" alt="AppVeyor"></a></td>
+<td align="left"><a href="https://ci.appveyor.com/project/ropensci/drake"><img src="https://ci.appveyor.com/api/projects/status/4ypc9xnmqt70j94e?svg=true&branch=master" alt="AppVeyor"></a></td>
 </tr>
 <tr class="even">
 <td align="left"><a href="https://github.com/ropensci/onboarding/issues/156"><img src="https://badges.ropensci.org/156_status.svg" alt="rOpenSci"></a></td>
